Release History
===============

trunk for 0.4.0
---------------
*Changes that break backwards compatibility*

* For consistency with other multi-equation models, the parameters of MNLogit
  are now transposed.

* tools.tools.ECDF -> distributions.ECDF
* tools.tools.monotone_fn_inverter -> distributions.monotone_fn_inverter
* tools.tools.StepFunction -> distributions.StepFunction


0.3.1
-----

* Removed academic-only WFS dataset.
* Fix easy_install issue on Windows.

0.3.0
-----

*Changes that break backwards compatibility*

Added api.py for importing. So the new convention for importing is::

    import scikits.statsmodels.api as sm

Importing from modules directly now avoids unnecessary imports and increases
the import speed if a library or user only needs specific functions.

* sandbox/output.py -> iolib/table.py
* lib/io.py -> iolib/foreign.py (Now contains Stata .dta format reader)
* family -> families
* families.links.inverse -> families.links.inverse_power
* Datasets' Load class is now load function.
* regression.py -> regression/linear_model.py
* discretemod.py -> discrete/discrete_model.py
* rlm.py -> robust/robust_linear_model.py
* glm.py -> genmod/generalized_linear_model.py
* model.py -> base/model.py
* t() method -> tvalues attribute (t() still exists but raises a warning)

*Main changes and additions*

* Numerous bugfixes.
* Time Series Analysis model (tsa)

  - Vector Autoregression Models VAR (tsa.VAR)
  - Autogressive Models AR (tsa.AR)
  - Autoregressive Moving Average Models ARMA (tsa.ARMA)
    optionally uses Cython for Kalman Filtering
    use setup.py install with option --with-cython
  - Baxter-King band-pass filter (tsa.filters.bkfilter)
  - Hodrick-Prescott filter (tsa.filters.hpfilter)
  - Christiano-Fitzgerald filter (tsa.filters.cffilter)

* Improved maximum likelihood framework uses all available scipy.optimize solvers
* Refactor of the datasets sub-package.
* Added more datasets for examples.